--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="avatar">
           <img class="img-circle" src="./img/berlintrainstation.JPG" width="200">
         </div>
-        <h3>I'm <strong>Alec Ramba</strong>, a Student.</h3>
-        <h3>Just a kid trying to graduate.</h3>
+        <h3>I'm <strong>Alec Ramba</strong>, a Senior Biology student at The University of Texas.</h3>
+        <h3>I’m interested in sustainable agriculture, conservation, travel, and the impact of politics on society.</h3>
         <h3>Have a look at some of my <a href="./projects/"> projects</a>.</h3>
         <h3>For more, check out my academic &amp; professional <a href="./resume/">resume</a>.</h3>
         <h3>To get in touch, contact me via email <a href="mailto:alec.ramba@utexas.edu">here</a>.</h3>
